Fixed render bug with top alignment

--- a/content.css
+++ b/content.css
@@ -72,9 +72,12 @@ html, body {
 	padding:4rem;
 	margin: 0 auto;
 	width:auto;
-	position: relative;
-	transform: translateY(-40%);
-	top:40%;
+	position: absolute;
+	-webkit-transform: translate(-50%,-50%);
+	transform: translate(-50%,-50%);
+	position: absolute;
+	top: 50%;
+	left: 50%;
 	font-size: 7rem;
 	background-color: #4e4e4e;
 	border:dashed 2px #6b6b6b;
